force-app/main/default/objects/Activismo_Encuesta_Activista__c/Activismo_Encuesta_Activista__c.object-meta.xml
<CustomObject>
    <label>Activismo Encuesta Sumate</label>
    <nameField>
        <displayFormat>EncActID-{00000}</displayFormat>
        <label>Activismo Encuestas Activistas Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activismo Encuestas Sumate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>