force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Actividad_Seleccionada__c.field-meta.xml
<CustomField>
    <fullName>Actividad_Seleccionada__c</fullName>
    <label>Actividad Seleccionada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atender llamados</fullName>
            </value>
            <value>
                <fullName>Encuestar Telefonicamente</fullName>
            </value>
            <value>
                <fullName>Comunicar por RRSS</fullName>
            </value>
            <value>
                <fullName>Entregar Panfletos</fullName>
            </value>
            <value>
                <fullName>Entregar Boletas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>