force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Activismo_Encuesta_Sumate__c.field-meta.xml
<CustomField>
    <fullName>Activismo_Encuesta_Sumate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activismo Encuesta Sumate</label>
    <referenceTo>typeform__Form_Mapping__c</referenceTo>
    <relationshipLabel>Activismo Encuestas Sumate</relationshipLabel>
    <relationshipName>Activismo_Encuestas_Sumate</relationshipName>
    <type>Lookup</type>
</CustomField>