force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Activista__c.field-meta.xml
<CustomField>
    <fullName>Activista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activista</label>
    <referenceTo>Activista__c</referenceTo>
    <relationshipName>Activismo_Encuestas_Activistas</relationshipName>
    <type>Lookup</type>
</CustomField>