force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Apellido_Activista__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Activista__c</fullName>
    <label>Apellido Activista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>