force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Celular_Activista__c.field-meta.xml
<CustomField>
    <fullName>Celular_Activista__c</fullName>
    <label>Celular Activista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>