force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Ciudad_Activista__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Activista__c</fullName>
    <label>Ciudad Activista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>