force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/DNI_Activista__c.field-meta.xml
<CustomField>
    <fullName>DNI_Activista__c</fullName>
    <label>DNI Activista</label>
    <length>50</length>
    <type>Text</type>
</CustomField>