force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Email_Encuesta_Activista__c.field-meta.xml
<CustomField>
    <fullName>Email_Encuesta_Activista__c</fullName>
    <label>Email Encuesta Activista</label>
    <required>true</required>
    <type>Email</type>
</CustomField>