force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Fecha_Encuesta_Activista__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Encuesta_Activista__c</fullName>
    <label>Fecha Encuesta Activista</label>
    <type>DateTime</type>
</CustomField>