force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Nombre_Activista__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Activista__c</fullName>
    <label>Nombre Activista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>