force-app/main/default/objects/Activismo_Encuesta_Activista__c/fields/Token_Typeform__c.field-meta.xml
<CustomField>
    <fullName>Token_Typeform__c</fullName>
    <externalId>true</externalId>
    <label>Token Typeform</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>