force-app/main/default/objects/Activismo_Encuesta_Activista__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activista__c</columns>
    <columns>Nombre_Activista__c</columns>
    <columns>Apellido_Activista__c</columns>
    <columns>Actividad_Seleccionada__c</columns>
    <columns>Email_Encuesta_Activista__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Token_Typeform__c</columns>
    <columns>Celular_Activista__c</columns>
    <columns>Ciudad_Activista__c</columns>
    <columns>DNI_Activista__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>